testing/macro-tests/tests/ui/store_storage_name_value.stderr
error: store(...) supports ident = ..., store_name = "...", canister = ..., and storage(stable(...)) or storage(heap())
  --> tests/ui/store_storage_name_value.rs:10:5
   |
10 |     storage = "stable"
   |     ^^^^^^^
